--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Cinema Seat Booking</title>
 </head>
 <body>
+    <div class="movies-container">
+        <label>Select a Movie</label>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
