--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <div class="movies-container">
         <label>Select a Movie</label>
+        <select id="movie">
+            <option value="15">Once Upon A Time In Hollywood</option>
+            <option value="17">Guardians of the Gallaxy 3</option>
+            <option value="20">Everything Everywhere All At Once</option>
+            <option value="25">Avatar: The Way Of Water</option>
+        </select>
     </div>
     <script src="main.js"></script>
 </body>
