--- a/index.html
+++ b/index.html
@@ -8,31 +8,23 @@
     <title>Cinema Seat Booking</title>
 </head>
 <body>
+    <h2>Select a Movie<i class="ic_couch"></i></h2>
     <div class="movies-container">
-        <label>Select a Movie</label>
-        <select id="movie">
-            <option value="15">Once Upon A Time In Hollywood (Price: 15$)</option>
-            <option value="17">Guardians of the Gallaxy 3 (Price: 17$)</option>
-            <option value="20">Everything Everywhere All At Once (Price: 20$)</option>
-            <option value="25">Avatar: The Way Of Water (Price: 25$)</option>
-        </select>
-    </div>
-    <div class="card-container">
-        <div class="card">
-          <img src="" alt="Once Upon A Time In Hollywood (Price: 15$)">
-          <h3>Назва фільму 1</h3>
+        <div class="movie">
+          <img src="images/Hollywood.jpg" alt="Once Upon A Time In Hollywood (Price: 15$)">
+          <h3>Once Upon A Time In Hollywood (Price: 15$)</h3>
         </div>
-        <div class="card">
-          <img src="film2.jpg" alt="Guardians of the Gallaxy 3 (Price: 17$)">
-          <h3>Назва фільму 2</h3>
+        <div class="movie">
+          <img src="images/Guardians.jpeg" alt="Guardians of the Gallaxy 3 (Price: 17$)">
+          <h3>Guardians of the Gallaxy 3 (Price: 17$)</h3>
         </div>
-        <div class="card">
-          <img src="film3.jpg" alt="Everything Everywhere All At Once (Price: 20$)">
-          <h3>Назва фільму 3</h3>
+        <div class="movie">
+          <img src="images/Everything.jpg" alt="Everything Everywhere All At Once (Price: 20$)">
+          <h3>Everything Everywhere All At Once (Price: 20$)</h3>
         </div>
-        <div class="card">
-          <img src="film4.jpg" alt="Avatar: The Way Of Water (Price: 25$)">
-          <h3>Назва фільму 4</h3>
+        <div class="movie">
+          <img src="images/Avatar.jpg" alt="Avatar: The Way Of Water (Price: 25$)">
+          <h3>Avatar: The Way Of Water (Price: 25$)</h3>
         </div>
       </div>
     <div class="container">
@@ -139,7 +131,9 @@
     </ul>
 
     <p class="text">Seats selected: <span id="count">0</span>seats. <br>
-        Total price: $<span id="total">0</span></p>
+        Total price: $<span id="total">0</span>
+    </p>
+
     <script src="main.js"></script>
 </body>
 </html>
