--- a/index.html
+++ b/index.html
@@ -8,25 +8,30 @@
     <title>Cinema Seat Booking</title>
 </head>
 <body>
-    <h2>Select a Movie<i class="ic_couch"></i></h2>
+    <h2>Select a Movie</h2>
     <div class="movies-container">
         <div class="movie">
-          <img src="images/Hollywood.jpg" alt="Once Upon A Time In Hollywood (Price: 15$)">
-          <h3>Once Upon A Time In Hollywood (Price: 15$)</h3>
+          <img src="images/Hollywood.jpg" alt="Once Upon A Time In Hollywood">
+          <h3>Once Upon A Time In Hollywood</h3>
+          <h3>Price: 15$</h3>
         </div>
         <div class="movie">
-          <img src="images/Guardians.jpeg" alt="Guardians of the Gallaxy 3 (Price: 17$)">
-          <h3>Guardians of the Gallaxy 3 (Price: 17$)</h3>
+          <img src="images/Guardians.jpeg" alt="Guardians of the Gallaxy 3">
+          <h3>Guardians of the Gallaxy 3</h3>
+          <h3>Price: 17$</h3>
         </div>
         <div class="movie">
-          <img src="images/Everything.jpg" alt="Everything Everywhere All At Once (Price: 20$)">
-          <h3>Everything Everywhere All At Once (Price: 20$)</h3>
+          <img src="images/Everything.jpg" alt="Everything Everywhere All At Once">
+          <h3>Everything Everywhere All At Once</h3>
+          <h3>Price: 20$</h3>
         </div>
         <div class="movie">
-          <img src="images/Avatar.jpg" alt="Avatar: The Way Of Water (Price: 25$)">
-          <h3>Avatar: The Way Of Water (Price: 25$)</h3>
+          <img src="images/Avatar.jpg" alt="Avatar: The Way Of Water">
+          <h3>Avatar: The Way Of Water</h3>
+          <h3>Price: 23$</h3>
         </div>
       </div>
+    <!-- 
     <div class="container">
         <div class="screen"></div>
         <div class="row">
@@ -113,9 +118,25 @@
             <div class="seat"></div>
             <div class="seat"></div>
         </div>
+    </div> 
+-->
+<div class="container">
+    <div class="screen"></div>
+    <div class="row">
+        <i class="ic_couch selected"></i>
+        <i class="ic_couch selected"></i>
+        <i class="ic_couch"></i>
+        <i class="ic_couch"></i>
+        <i class="ic_couch"></i>
+        <i class="ic_couch"></i>
+        <i class="ic_couch"></i>
+        <i class="ic_couch"></i>
+        <i class="ic_couch"></i>
+        <i class="ic_couch"></i>
     </div>
 
-    <ul class="showcase">
+
+    <ul class="legend">
         <li>
             <div class="seat"></div>
             <small>Available</small>
