--- a/index.html
+++ b/index.html
@@ -1,160 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Cinema Seat Booking</title>
-</head>
-<body>
+  </head>
+  <body>
     <h2>Select a Movie</h2>
     <div class="movies-container">
-        <div class="movie">
-          <img src="images/Hollywood.jpg" alt="Once Upon A Time In Hollywood">
-          <h3>Once Upon A Time In Hollywood</h3>
-          <h3>Price: 15$</h3>
-        </div>
-        <div class="movie">
-          <img src="images/Guardians.jpeg" alt="Guardians of the Gallaxy 3">
-          <h3>Guardians of the Gallaxy 3</h3>
-          <h3>Price: 17$</h3>
-        </div>
-        <div class="movie">
-          <img src="images/Everything.jpg" alt="Everything Everywhere All At Once">
-          <h3>Everything Everywhere All At Once</h3>
-          <h3>Price: 20$</h3>
-        </div>
-        <div class="movie">
-          <img src="images/Avatar.jpg" alt="Avatar: The Way Of Water">
-          <h3>Avatar: The Way Of Water</h3>
-          <h3>Price: 23$</h3>
-        </div>
+      <div class="movie" data-price="15">
+        <img src="images/Hollywood.jpg" alt="Once Upon A Time In Hollywood">
+        <h3>Price: 15$</h3>
       </div>
-    <!-- 
+      <div class="movie" data-price="17">
+        <img src="images/Guardians.jpeg" alt="Guardians of the Gallaxy 3">
+        <h3>Price: 17$</h3>
+      </div>
+      <div class="movie" data-price="20">
+        <img
+          src="images/Everything.jpg"
+          alt="Everything Everywhere All At Once"
+        />
+        <h3>Price: 20$</h3>
+      </div>
+      <div class="movie" data-price="23">
+        <img src="images/Avatar.jpg" alt="Avatar: The Way Of Water">
+        <h3>Price: 23$</h3>
+      </div>
+      <div class="movie" data-price="25">
+        <img src="images/Knives.jpeg" alt="Knives Out">
+        <h3>Price: 25$</h3>
+      </div>
+    </div>
     <div class="container">
-        <div class="screen"></div>
-        <div class="row">
-            <div class="seat occupied"></div>
-            <div class="seat occupied"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat occupied"></div>
-            <div class="seat occupied"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-        </div>
-        <div class="row">
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat occupied"></div>
-            <div class="seat occupied"></div>
-            <div class="seat occupied"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-        </div>
-        <div class="row">
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-        </div>
-        <div class="row">
-            <div class="seat"></div>
-            <div class="seat occupied"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat occupied"></div>
-            <div class="seat occupied"></div>
-            <div class="seat occupied"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-        </div>
-        <div class="row">
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-        </div>
-        <div class="row">
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-        </div>
-        <div class="row">
-            <div class="seat occupied"></div>
-            <div class="seat occupied"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-            <div class="seat"></div>
-        </div>
-    </div> 
--->
-<div class="container">
-    <div class="screen"></div>
-    <div class="row">
-        <i class="ic_couch selected"></i>
-        <i class="ic_couch selected"></i>
-        <i class="ic_couch"></i>
-        <i class="ic_couch"></i>
-        <i class="ic_couch"></i>
-        <i class="ic_couch"></i>
-        <i class="ic_couch"></i>
-        <i class="ic_couch"></i>
-        <i class="ic_couch"></i>
-        <i class="ic_couch"></i>
+      <div class="screen"></div>
+      <div class="row" data-row="A">
+        <i class="ic_couch occupied" data-seat="1"></i>
+        <i class="ic_couch occupied" data-seat="2"></i>
+        <i class="ic_couch" data-seat="3"></i>
+        <i class="ic_couch" data-seat="4"></i>
+        <i class="ic_couchd" data-seat="5"></i>
+        <i class="ic_couch selected" data-seat="6"></i>
+        <i class="ic_couch selected" data-seat="7"></i>
+        <i class="ic_couch" data-seat="8"></i>
+        <i class="ic_couch occupied" data-seat="9"></i>
+        <i class="ic_couch occupied" data-seat="10"></i>
+        <i class="ic_couch occupied" data-seat="11"></i>
+        <i class="ic_couch" data-seat="12"></i>
+        <i class="ic_couch" data-seat="13"></i>
+        <i class="ic_couch" data-seat="14"></i>
+      </div>
+      <div class="row" data-row="B">
+        <i class="ic_couch" data-seat="1"></i>
+        <i class="ic_couch" data-seat="2"></i>
+        <i class="ic_couch" data-seat="3"></i>
+        <i class="ic_couch" data-seat="4"></i>
+        <i class="ic_couch" data-seat="5"></i>
+        <i class="ic_couch occupied" data-seat="6"></i>
+        <i class="ic_couch occupied" data-seat="7"></i>
+        <i class="ic_couch occupied" data-seat="8"></i>
+        <i class="ic_couch" data-seat="9"></i>
+        <i class="ic_couch" data-seat="10"></i>
+        <i class="ic_couch" data-seat="11"></i>
+        <i class="ic_couch occupied" data-seat="12"></i>
+        <i class="ic_couch occupied" data-seat="13"></i>
+        <i class="ic_couch" data-seat="14"></i>
+      </div>
+      <div class="row" data-row="C">
+        <i class="ic_couch" data-seat="1"></i>
+        <i class="ic_couch" data-seat="2"></i>
+        <i class="ic_couch" data-seat="3"></i>
+        <i class="ic_couch" data-seat="4"></i>
+        <i class="ic_couch" data-seat="5"></i>
+        <i class="ic_couch" data-seat="6"></i>
+        <i class="ic_couch" data-seat="7"></i>
+        <i class="ic_couch" data-seat="8"></i>
+        <i class="ic_couch" data-seat="9"></i>
+        <i class="ic_couch" data-seat="10"></i>
+        <i class="ic_couch" data-seat="11"></i>
+        <i class="ic_couch" data-seat="12"></i>
+        <i class="ic_couch" data-seat="13"></i>
+        <i class="ic_couch" data-seat="14"></i>
+      </div>
+      <div class="row" data-row="D">
+        <i class="ic_couch" data-seat="1"></i>
+        <i class="ic_couch" data-seat="2"></i>
+        <i class="ic_couch" data-seat="3"></i>
+        <i class="ic_couch" data-seat="4"></i>
+        <i class="ic_couch" data-seat="5"></i>
+        <i class="ic_couch" data-seat="6"></i>
+        <i class="ic_couch occupied" data-seat="7"></i>
+        <i class="ic_couch occupied" data-seat="8"></i>
+        <i class="ic_couch" data-seat="9"></i>
+        <i class="ic_couch" data-seat="10"></i>
+        <i class="ic_couch" data-seat="11"></i>
+        <i class="ic_couch" data-seat="12"></i>
+        <i class="ic_couch" data-seat="13"></i>
+        <i class="ic_couch" data-seat="14"></i>
+      </div>
+      <div class="row" data-row="E">
+        <i class="ic_couch" data-seat="1"></i>
+        <i class="ic_couch" data-seat="2"></i>
+        <i class="ic_couch" data-seat="3"></i>
+        <i class="ic_couch" data-seat="4"></i>
+        <i class="ic_couch" data-seat="5"></i>
+        <i class="ic_couch" data-seat="6"></i>
+        <i class="ic_couch occupied" data-seat="7"></i>
+        <i class="ic_couch occupied" data-seat="8"></i>
+        <i class="ic_couch occupied" data-seat="9"></i>
+        <i class="ic_couch occupied" data-seat="10"></i>
+        <i class="ic_couch" data-seat="11"></i>
+        <i class="ic_couch" data-seat="12"></i>
+        <i class="ic_couch" data-seat="13"></i>
+        <i class="ic_couch" data-seat="14"></i>
+      </div>
+      <div class="row" data-row="F">
+        <i class="ic_couch" data-seat="1"></i>
+        <i class="ic_couch" data-seat="2"></i>
+        <i class="ic_couch" data-seat="3"></i>
+        <i class="ic_couch" data-seat="4"></i>
+        <i class="ic_couch" data-seat="5"></i>
+        <i class="ic_couch" data-seat="6"></i>
+        <i class="ic_couch" data-seat="7"></i>
+        <i class="ic_couch" data-seat="8"></i>
+        <i class="ic_couch" data-seat="9"></i>
+        <i class="ic_couch" data-seat="10"></i>
+        <i class="ic_couch" data-seat="11"></i>
+        <i class="ic_couch" data-seat="12"></i>
+        <i class="ic_couch" data-seat="13"></i>
+        <i class="ic_couch" data-seat="14"></i>
+      </div>
+      <div class="row" data-row="G">
+        <i class="ic_couch" data-seat="1"></i>
+        <i class="ic_couch" data-seat="2"></i>
+        <i class="ic_couch" data-seat="3"></i>
+        <i class="ic_couch" data-seat="4"></i>
+        <i class="ic_couch" data-seat="5"></i>
+        <i class="ic_couch" data-seat="6"></i>
+        <i class="ic_couch" data-seat="7"></i>
+        <i class="ic_couch" data-seat="8"></i>
+        <i class="ic_couch" data-seat="9"></i>
+        <i class="ic_couch" data-seat="10"></i>
+        <i class="ic_couch" data-seat="11"></i>
+        <i class="ic_couch" data-seat="12"></i>
+        <i class="ic_couch" data-seat="13"></i>
+        <i class="ic_couch" data-seat="14"></i>
+      </div>
+      <div class="row" data-row="H">
+        <i class="ic_couch" data-seat="1"></i>
+        <i class="ic_couch" data-seat="2"></i>
+        <i class="ic_couch" data-seat="3"></i>
+        <i class="ic_couch" data-seat="4"></i>
+        <i class="ic_couch" data-seat="5"></i>
+        <i class="ic_couch occupied" data-seat="6"></i>
+        <i class="ic_couch occupied" data-seat="7"></i>
+        <i class="ic_couch" data-seat="8"></i>
+        <i class="ic_couch" data-seat="9"></i>
+        <i class="ic_couch occupied" data-seat="10"></i>
+        <i class="ic_couch occupied" data-seat="11"></i>
+        <i class="ic_couch occupied" data-seat="12"></i>
+        <i class="ic_couch occupied" data-seat="13"></i>
+        <i class="ic_couch occupied" data-seat="14"></i>
+      </div>
+      <div class="row" data-row="I">
+        <i class="ic_couch occupied" data-seat="1"></i>
+        <i class="ic_couch occupied" data-seat="2"></i>
+        <i class="ic_couch occupied" data-seat="3"></i>
+        <i class="ic_couch occupied" data-seat="4"></i>
+        <i class="ic_couch" data-seat="5"></i>
+        <i class="ic_couch" data-seat="6"></i>
+        <i class="ic_couch" data-seat="7"></i>
+        <i class="ic_couch" data-seat="8"></i>
+        <i class="ic_couch" data-seat="9"></i>
+        <i class="ic_couch" data-seat="10"></i>
+        <i class="ic_couch" data-seat="11"></i>
+        <i class="ic_couch" data-seat="12"></i>
+        <i class="ic_couch" data-seat="13"></i>
+        <i class="ic_couch" data-seat="14"></i>
+      </div>
     </div>
 
-
     <ul class="legend">
-        <li>
-            <div class="seat"></div>
-            <small>Available</small>
-        </li>
-        <li>
-            <div class="seat selected"></div>
-            <small>Selected</small>
-        </li>
-        <li>
-            <div class="seat occupied"></div>
-            <small>Occupied</small>
-        </li>
+      <li>
+        <i class="ic_couch"></i>
+        <small>Available</small>
+      </li>
+      <li>
+        <i class="ic_couch selected"></i>
+        <small>Selected</small>
+      </li>
+      <li>
+        <i class="ic_couch occupied"></i>
+        <small>Occupied</small>
+      </li>
     </ul>
 
-    <p class="text">Seats selected: <span id="count">0</span>seats. <br>
-        Total price: $<span id="total">0</span>
+    <p class="text">
+      Seats selected: <span id="count">0</span>seats. <br />
+      Total price: $<span id="total">0</span>
     </p>
 
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
