--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <i class="ic_couch" data-seat="3"></i>
         <i class="ic_couch" data-seat="4"></i>
         <i class="ic_couchd" data-seat="5"></i>
-        <i class="ic_couch selected" data-seat="6"></i>
-        <i class="ic_couch selected" data-seat="7"></i>
+        <i class="ic_couch" data-seat="6"></i>
+        <i class="ic_couch" data-seat="7"></i>
         <i class="ic_couch" data-seat="8"></i>
         <i class="ic_couch occupied" data-seat="9"></i>
         <i class="ic_couch occupied" data-seat="10"></i>
