--- a/index.html
+++ b/index.html
@@ -198,9 +198,10 @@
     </ul>
 
     <p class="text">
-      Seats selected: <span id="count">0</span>seats. <br />
-      Total price: $<span id="total">0</span>
-    </p>
+        Seats selected: <span id="count">0</span> seats. <br />
+        Row and Seat number: <span id="selected-seats"></span> <br />
+        Total price: $<span id="total">0</span>
+      </p>
 
     <script src="main.js"></script>
   </body>
