added occupied class to some icons

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         <i class="ic_couch" data-seat="7"></i>
         <i class="ic_couch" data-seat="8"></i>
         <i class="ic_couch" data-seat="9"></i>
-        <i class="ic_couch" data-seat="10"></i>
-        <i class="ic_couch" data-seat="11"></i>
+        <i class="ic_couch occupied" data-seat="10"></i>
+        <i class="ic_couch occupied" data-seat="11"></i>
         <i class="ic_couch" data-seat="12"></i>
         <i class="ic_couch" data-seat="13"></i>
         <i class="ic_couch" data-seat="14"></i>
