added clear button and made it functional

--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@
         Row and Seat number: <span id="selected-seats"></span> <br>
         Total price: $<span id="total">0</span>
     </p>
+
+    <button id="clear-selection">Clear Selection</button>
     <script src="main.js"></script>
   </body>
 </html>
