added button checkout

--- a/index.html
+++ b/index.html
@@ -204,7 +204,11 @@
         Total price: $<span id="total">0</span>
     </p>
 
-    <button id="clear-selection">Clear Selection</button>
+    <div class="btn-container">
+      <button id="clear-selection">Clear Selection</button>
+      <button id="checkout">Checkout</button>
+    </div>
+    
     <script src="main.js"></script>
   </body>
 </html>
