creating contact details page

--- a/checkout.html
+++ b/checkout.html
@@ -7,7 +7,7 @@
     <title>Checkout</title>
   </head>
   <body>
-    <h2>Thank You for Your Purchase!</h2>
+    <h2>Please enter your contact details</h2>
     <p>Your tickets are on the way to your email!</p>
 
     <a href="index.html">Back to seat reservation</a>
